# Clone

./: .cproject  .gitignore  .gitmodules  .project  Clone.depend  README.md
Clone/: Clone.cbp  Clone.depend  Clone.layout
Clone-game/: Clone.cbp  Clone.depend.orig  Clone.layout
Clone/include/: Action.h  ActionController.h  AndEventNode.h  B2BodyBuilder.h  B2BoxBuilder.h  B2Builder.h  B2DBuilderHelper.h  B2DWorld.h  EventNode.h  KeyEventController.h  LogicalNode.h  Player.h  SFMLB2dDebugDraw.h  Updateable.h
Clone/src/: Action.cpp  ActionController.cpp  AndEventNode.cpp  B2BodyBuilder.cpp  B2BoxBuilder.cpp  B2Builder.cpp  B2DBuilder.cpp  B2DWorld.cpp  Box2DConstants.cpp  KeyEventController.cpp  LogicalNode.cpp  RealtimeAndNode.cpp  SFMLB2dDebugDraw.cpp  Updateable.cpp  main.cpp
bind/: bind.lua
bind/dub-tmp/: Doxyfile
include/: B2DWorld.h  PhysicsTimeStepSystem.h  Updateable.h
lua-5.1/etc/: min.c  noparser.c
lua-5.1/src/: luac  luac.c
lua-configs/: levelsConfig.lua  playerConfig.lua
lua-scripts/: levelsConfig.lua  playerConfig.lua
lua-scripts/levels/: emptyLevelScript.lua  level1.lua  level1.lua.snapshot  level2.lua
luabindings/: .hg_archival.txt  CMakeLists.txt  luabind-stlport.pc.in
luabindings/CMakeModules/: FindExternal.cmake  FindSTLport.cmake  FindWindowsSDK.cmake  luabind.cmake
luabindings/debian/: changelog  control  copyright  libluabind-stlport0.install  rules  source.lintian-overrides
luabindings/luabind/: lua_include.hpp
luabindings/luabind/detail/: call_function.hpp  call_member.hpp
maps/: b2d.tmx  level-1-test-2.tmx  level-1-test-tall.tmx  level-1-test.tmx  level-1.tmx  level-2.tmx  level-3.tmx  level-4.tmx  level-5.tmx  level-6.tmx  test-b2d.tmx  test-lvl-1-b2d.tmx  test-lvl-1.tmx
src/: B2DWorld.cpp  Game.cpp  Game.h  PhysicsTimeStepSystem.cpp  Player.cpp  UUIDGenerator.cpp  UUIDGenerator.h  main.cpp  playerConfig.lua
src/bind/: b2_b2AABB.cpp  b2_b2BlockAllocator.cpp  b2_b2Body.cpp  b2_b2BodyDef.cpp  b2_b2BroadPhase.cpp  b2_b2ChainShape.cpp  b2_b2CircleShape.cpp  b2_b2ClipVertex.cpp  b2_b2Color.cpp  b2_b2ContactFeature.cpp  b2_b2ContactFilter.cpp  b2_b2ContactID.cpp  b2_b2ContactImpulse.cpp  b2_b2ContactListener.cpp  b2_b2ContactManager.cpp  b2_b2DestructionListener.cpp  b2_b2DistanceInput.cpp  b2_b2DistanceJoint.cpp  b2_b2DistanceJointDef.cpp  b2_b2DistanceOutput.cpp  b2_b2DistanceProxy.cpp  b2_b2Draw.cpp  b2_b2DynamicTree.cpp  b2_b2EdgeShape.cpp  b2_b2Filter.cpp  b2_b2Fixture.cpp  b2_b2FixtureDef.cpp  b2_b2FixtureProxy.cpp  b2_b2FrictionJoint.cpp  b2_b2FrictionJointDef.cpp  b2_b2GearJoint.cpp  b2_b2GearJointDef.cpp  b2_b2Island.cpp  b2_b2Jacobian.cpp  b2_b2Joint.cpp  b2_b2JointDef.cpp  b2_b2JointEdge.cpp  b2_b2Manifold.cpp  b2_b2ManifoldPoint.cpp  b2_b2MassData.cpp  (+48 more)
src/components/: AABBComponent.h  AnimationComponent.h  BladeComponent.h  BladeShooterComponent.h  BreakableJointComponent.h  ComponentLoader.cpp  ComponentLoader.h  ComponentLoader.h.snapshot  DeathBringerComponent.h  Direction.cpp  Direction.h  EndLevelComponent.h  EndPointCollisionTagComponent.h  EndPointTagComponent.h  FixtureMapComponent.h  IDComponent.h  IgnoreCollisionComponent.h  NinjaDataComponent.h  NinjaSenseComponent.h  PhysicsComponent.h  PlayerControls.h  PlayerControlsComponent.h  PlayerDeadComponent.h  PlayerState.h  PlayerStateComponenet.h  PlayerStateComponent.h  Sensors.h  (+8 more)
(+350 files in other folders)
